added all Student App functional